fixed homescreen overflow

--- a/src/sass/pages/homepage.scss
+++ b/src/sass/pages/homepage.scss
@@ -156,6 +156,7 @@
         font-weight: 500;
         color: rgba($white, 0.75);
         margin-block: $spacer * 2 $spacer * 1.35;
+        width: auto;
       }
       a {
         display: block;
